# sports-ml-lab

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  opencode.jsonc  pyproject.toml
.github/workflows/: ci.yml
data/samples/: sample_qb_input_2025_w1.csv
docs/: 2026-schedule.md  _config.yml  backtests.md  benchmarks.md  experiments.md  feature-usage-map.md  index.md  model-card.md  predictions.md  research-roadmap.md  research_integrity_audit.md  weekly_runbook.md
docs/opencode-commands/: discover.md  ingest-debug.md  inspect-nflreadpy.md  test.md
docs/predictions/: audit_2026.md  index.md
reports/backtests/: 2022_backtest_report.md  2022_calibration_buckets.csv  2022_extreme_games.csv  2022_subgroup_summary.csv  2022_team_summary.csv  2022_weekly_summary.csv  2023_backtest_report.md  2023_calibration_buckets.csv  2023_extreme_games.csv  2023_subgroup_summary.csv  (+14 more)
src/: mlb_injury_report.py
tests/: conftest.py  test_audit_artifacts.py  test_autogluon.py  test_coach.py  test_coach_season_regression.py  test_combined_features.py  test_comprehensive_efficiency.py  test_confidence_calibration.py  test_dashboard.py  test_decayed_elo.py  test_elo_leakage.py  test_elo_tuning.py  test_epa_features.py  test_expanded_elo_spine.py  test_expressive_models.py  test_feature_selection.py  test_features.py  test_frozen_qb_overlay.py  test_frozen_qb_overlay_foldsafe.py  test_gam_logistic.py  test_gated_qb_adjustment.py  test_glicko.py  test_gradient_boosting.py  test_home_away_elo.py  test_incumbent_schema.py  test_ingest_nfl.py  test_injury_features.py  test_learned_overlay.py  test_live_preflight.py  test_logistic.py  test_margin_aware_elo.py  test_market_baseline.py  test_market_benchmark.py  test_metrics.py  test_no_qb_baseline.py  test_optuna_elo_search.py  test_optuna_feature_selection.py  test_pipeline_hardening.py  test_predict_future_ext.py  test_predict_incumbent.py  (+39 more)
(+205 files in other folders)
