[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sportslab"
version = "0.1.0"
description = "NFL-first sports ML research lab"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "nflreadpy>=0.1.5",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "click>=8.0",
    "meteostat>=2.1.4",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[project.scripts]
sportslab = "sportslab.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
