[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sportslab"
version = "0.1.0"
description = "NFL-first sports prediction research lab — reproducible ML, explainable features, strict leakage prevention"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
ingest = [
    "nflreadpy>=1.3",
]
experiments = [
    "optuna>=3.0",
    "scipy>=1.10",
]

[project.scripts]
sportslab = "sportslab.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.ruff.format]
quote-style = "double"
